--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -6,25 +6,67 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background-color: #f9f9f9;
+    background-color: #ffffff;
     overflow: scroll;
+    overflow-x: hidden;
 }
 
-#similar-products {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-    overflow-x: auto;
+.body-wrapper {
+    width: 100%;
+    max-width: 1100px; /* Adjust the maximum width of the wrapper as needed */
     padding: 20px;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+header {
+    background-color: #333;
+    color: #fff;
+    width: 100%;
+    padding: 10px 0;
+    text-align: center;
+}
+
+nav ul {
+    list-style-type: none;
+    padding: 10px;
+}
+
+nav ul li {
+    display: inline;
+    margin: 0 10px;
+}
+
+nav ul li a {
+    text-decoration: none;
+    color: #fff;
+    font-weight: bold;
+    font-size: 30px;
+    transition: color 0.3s;
+}
+
+nav ul li a:hover {
+    color: #ffd700; /* Change color on hover */
+}
+#similar-products {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    flex-wrap: wrap;
+    gap: 10px;
+    overflow-x: auto;
+    padding: 10px;
     width: 100vw;
     box-sizing: border-box;
-    justify-content: flex-start;
+    justify-content: center;
     scroll-behavior: smooth;
 }
 
 .product {
     position: relative;
-    background-color: #fff;
+    background-color: #ffffff;
     border: 1px solid #e0e0e0;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -35,11 +77,11 @@ body {
     transition: transform 0.2s, box-shadow 0.2s;
 }
 
-.product img {
-    max-width: 100%;
+.product-image img {
+    max-width: 200px;
+    max-height: 200px;
+    width: auto;
     height: auto;
-    margin-bottom: 15px;
-    border-radius: 8px 8px 0 0;
 }
 
 .product h2 {
