--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -13,7 +13,7 @@ body {
 
 .body-wrapper {
     width: 100%;
-    max-width: 1100px; /* Adjust the maximum width of the wrapper as needed */
+    max-width: 1500px;
     padding: 20px;
     box-sizing: border-box;
     display: flex;
@@ -49,19 +49,19 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-    color: #ffd700; /* Change color on hover */
+    color: #ffd700;
 }
 #similar-products {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    flex-wrap: wrap;
     gap: 10px;
     overflow-x: auto;
     padding: 10px;
-    width: 100vw;
+    width: 70%;
     box-sizing: border-box;
     justify-content: center;
     scroll-behavior: smooth;
+    margin: 0 auto;
 }
 
 .product {
@@ -75,6 +75,7 @@ nav ul li a:hover {
     padding: 20px;
     flex: 0 0 auto;
     transition: transform 0.2s, box-shadow 0.2s;
+
 }
 
 .product-image img {
@@ -94,6 +95,13 @@ nav ul li a:hover {
     font-size: 14px;
     color: #666;
     margin: 0 0 15px 0;
+}
+
+.product .product-brand {
+    font-size: 19px; /* Adjust font size as needed */
+    font-weight: lighter;
+    color: #000000; /* Adjust color if necessary */
+    margin-bottom: 10px; /* Add some spacing below the brand */
 }
 
 .product .logo {
